@@ -1,3 +1,12 @@
+2004-02-16  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_rand.c (USE_MEM_ENTROPY): enable use of uninitialized memory
+	for extra entropy only if neither Insure nor Valgrind are around
+	
+2004-02-11  Seth Robertson  <seth@sysdetect.com>
+
+	* lib/b_stats.c: Talk about how to improve accuracy
+
 2004-02-09  Seth Robertson  <seth@pearl.sysdetect.com>
 
 	* include/libbk_net.h (BAKA_TCPHDR_FLAGECE|FLAGCWR): Add "new" RFC
